extract-doctests/tests/ui/bad_attr_ident2.stderr
error: Expected template, not bad_attr
 --> tests/ui/bad_attr_ident2.rs:3:34
  |
3 | #[extract_doctests(inline_config(bad_attr = ""))]
  |                                  ^^^^^^^^
